--- a/index.html
+++ b/index.html
@@ -55,31 +55,12 @@
 
             <div class="projects">
                 <div class="project">
-                    <a href="https://juniordias1981.github.io/pedido/" target="_blank">
+                    <a href="https://sistemapedido.netlify.app/" target="_blank">
                         <img src="images/projeto1.png" alt="Projeto 1" class="responsive-img" />
                         <h3>Pedido Online</h3>
                     </a>
                 </div>
-                <div class="project">
-                    <a href="https://juniordias1981.github.io/conversorraw/" target="_blank">
-                        <img src="images/convert.png" alt="Projeto 2" class="responsive-img" />
-                        <h3>Conversor RAW</h3>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://juniordias1981.github.io/conversorwebp/
-                    " target="_blank">
-                        <img src="images/convert.png" alt="Projeto 2" class="responsive-img" />
-                        <h3>Conversor WEBP</h3>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://juniordias1981.github.io/conversorheif/
-                    " target="_blank">
-                        <img src="images/convert.png" alt="Projeto 2" class="responsive-img" />
-                        <h3>Conversor HEIF</h3>
-                    </a>
-                </div>
+               
                 <div class="project">
                     <a href="https://juniordias1981.github.io/conversorimagens/
                     " target="_blank">
@@ -87,15 +68,7 @@
                         <h3>Conversor de imagens</h3>
                     </a>
                 </div>
-                <div class="project">
-                    <a href="https://juniordias1981.github.io/esmalteriacarioca/
-                    " target="_blank">
-                        <img src="images/logo-bg.png" alt="Projeto 2" class="responsive-img" />
-                        <h3>Esmalteria carioca</h3>
-                    </a>
-                </div>
             </div>
-        </div>
     </section>
 
     <section id="contact" class="clearfix">
